Bigger Header, thinner tech stack, maybe fixed zoom issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,10 @@ h2 {
     width: 0px;
   }
   50% {
-    width: 420px;
+    width: 400px;
   }
   100% {
-    width: 420px;
+    width: 400px;
   }
 }
 @keyframes blinkTextCursor {
@@ -166,15 +166,14 @@ nav {
   font-weight: bold;
   list-style-type: none;  /* Removes bullet points */
   margin: 0;  /* Removes margin */
-  margin: 0;  /* Removes default margin */
   display: flex;  /* Flexbox to make the items horizontal */
   justify-content: center;  /* Centers items horizontally */
   align-items: center;  /* Align items vertically */
   box-sizing: border-box;
   width: 100%;
   margin-inline: 60px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
   overflow-y: hidden;
 }
 .dark-mode nav {
@@ -193,7 +192,6 @@ nav {
 nav ul {
   list-style-type: none;  /* Removes bullet points */
   margin: 0;  /* Removes margin */
-  margin: 0;  /* Removes default margin */
   display: flex;  /* Flexbox to make the items horizontal */
   justify-content: center;  /* Centers items horizontally */
   align-items: center;  /* Align items vertically */
@@ -379,8 +377,11 @@ footer .footer-content a {
     height: 60px;
     flex-wrap: wrap;
     margin:0;
-    margin-left:0px;
     overflow-y: hidden;
+  }
+  nav {
+    margin-top: 6vh;
+    margin-bottom: 6vh;
   }
   .navbar button {
     position: relative;
@@ -388,7 +389,7 @@ footer .footer-content a {
     font-size: 50px;
     flex-wrap: wrap;
     margin:0;
-    margin-inline: 50px;
+    margin-inline: 40px;
     overflow-y: hidden;
   }
   
@@ -397,7 +398,6 @@ footer .footer-content a {
     left: -30px;
     font-size: 50px;
     vertical-align: middle;
-    margin:0;
     margin:0;
     margin-inline: 50px;
     z-index: 10000;
@@ -415,8 +415,7 @@ footer .footer-content a {
     display: flex;
     justify-content: space-around; /* Adjust spacing between items */
     align-items: center; /* Vertically center items */
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
   }
   footer,
   .dark-mode footer {
@@ -485,7 +484,7 @@ footer .footer-content a {
   .TechStack {
     flex-direction: row; /* Stack items vertically */
     align-items: center; /* Center items */
-    transform: scale(1.32);
+    transform: scale(1.3);
     margin-bottom: 70px;
     position: relative;
     left: -30px;
@@ -496,7 +495,7 @@ footer .footer-content a {
     margin-right: 0; /* Remove right margin for vertical stacking */
     margin-bottom: 10px; /* Add bottom margin for spacing between items */
     margin-top: 10px;
-    margin-inline: 20px;
+    margin-inline: 18px;
     overflow-y: hidden;
   }
   .img1, .img2{
